--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,6 @@ body {
 	height: 100vh;
 	overflow-y: scroll;
 }
-@media screen and (max-width: 450px) {
-	#container {
-	overflow-y: visible;
-	}
-}
 /* ヘッダー */
 header {
 	position: sticky;
@@ -94,15 +89,13 @@ header {
     width: 15%;
     position: absolute;
 	top: 65%;
+	font-weight: normal;
+	transition: all 0.5s;
+    position: relative;
 }
 .header_menu:hover .ddmenu {
 	position: absolute;
     display: block;
-}
-.ddmenu {
-	font-weight: normal;
-	transition: all 0.5s;
-    position: relative;
 }
 .ddmenu li {
 	padding: 10%;
@@ -143,6 +136,120 @@ header {
 #header_icons_nav ul {
 	display: flex;
 	justify-content: space-between;
+}
+
+/* ハンバーガーメニュー */
+.menu-btn {
+	position: absolute;
+	top: 0;
+	right: 0;
+	display: none;
+	height: 100%;
+	width: 15%;
+	justify-content: center;
+	align-items: center;
+	z-index: 90;
+	border: 1px solid #222222;
+	border-top: none;
+}
+@media screen and (max-width: 550px) {
+	.menu-btn {
+	display:flex
+	}	
+}
+.menu-btn span,
+.menu-btn span:before,
+.menu-btn span:after {
+    content: '';
+    display: block;
+    height: 3px;
+    width: 25px;
+    border-radius: 3px;
+    background-color: #222222;
+    position: absolute;
+}
+.menu-btn span:before {
+    bottom: 8px;
+}
+.menu-btn span:after {
+    top: 8px;
+}
+#menu-btn-check:checked ~ .menu-btn span {
+	background-color: rgba(255, 255, 255, 0);
+}
+#menu-btn-check:checked ~ .menu-btn span::before {
+    bottom: 0;
+    transform: rotate(45deg);
+}
+#menu-btn-check:checked ~ .menu-btn span::after {
+    top: 0;
+    transform: rotate(-45deg);
+}
+#menu-btn-check {
+    display: none;
+}
+.menu-content {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+	left: 100%;
+    z-index: 80;
+	background: rgb(255, 255, 255, 0.9);
+	transition: all 0.5s;
+}
+#menu_all {
+    padding: 70px 10px 0;
+}
+.parent_list {
+    border-bottom: solid 1px #222222;
+}
+.parent_list a {
+    display: block;
+    width: 100%;
+	font-size: 1.2rem;
+    box-sizing: border-box;
+    color: black;
+    text-decoration: none;
+    padding: 9px 15px 10px 0;
+    position: relative;
+}
+.ichikaisou::before {
+    content: "";
+    width: 7px;
+    height: 7px;
+    border-top: solid 2px #222222;
+    border-right: solid 2px #222222;
+    transform: rotate(45deg);
+    position: absolute;
+    right: 11px;
+    top: 16px;
+}
+.nikaisou::before {
+    content: "";
+    width: 7px;
+    height: 7px;
+    border-top: solid 2px #222222;
+    border-right: solid 2px #222222;
+    transform: rotate(135deg);
+    position: absolute;
+    right: 11px;
+    top: 16px;
+}
+#menu-btn-check:checked ~ .menu-content {
+    left: 0;
+}
+.menu-content-child {
+	display: none;
+}
+#menu-content-check-shisetsu:checked ~ .menu-content-child, #menu-content-check-course:checked ~ .menu-content-child, #menu-content-check-sotsugyou:checked ~ .menu-content-child {
+	margin-left: 4%;
+	display: block;
+	height: auto;
+	text-decoration: 1px underline solid #222222;
+}
+#menu-content-check-shisetsu, #menu-content-check-course, #menu-content-check-sotsugyou {
+	display: none;
 }
 
 /* フッター */
@@ -391,7 +498,7 @@ footer p {
 }
 #curriculum ul {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 }
 .curriculum_dankai {
