--- a/css/style.css
+++ b/css/style.css
@@ -149,8 +149,8 @@ header {
 	justify-content: center;
 	align-items: center;
 	z-index: 90;
-	border: 1px solid #222222;
-	border-top: none;
+	border-left: 1px solid #222222;
+	border-bottom: 1px solid #222222;
 }
 @media screen and (max-width: 550px) {
 	.menu-btn {
@@ -353,7 +353,7 @@ footer p {
 	background-size:cover;
 	background-position-y: 100%;
 	width: 100%;
-	height: 75%;
+	height: 70vh
 }
 @media screen and (max-width: 960px) {
 	#gazou_jugyou {
@@ -511,6 +511,7 @@ footer p {
 	writing-mode:vertical-lr;
 	text-orientation: upright;
 	border: 3px solid #222222;
+	overflow-wrap: anywhere;
 }
 @media screen and (max-width: 960px) {
 	.curriculum_dankai {
