--- a/css/style.css
+++ b/css/style.css
@@ -462,6 +462,7 @@ footer p {
 	height: auto;
 	margin-top: 2%;
 	padding: 1.5%;
+	overflow-wrap: wrap;
 }
 @media screen and (max-width: 550px) {
 	#graphic_soft, #web_seisaku {
