--- a/css/style.css
+++ b/css/style.css
@@ -462,7 +462,7 @@ footer p {
 	height: auto;
 	margin-top: 2%;
 	padding: 1.5%;
-	overflow-wrap: wrap;
+/	overflow-wrap: wrap;
 }
 @media screen and (max-width: 550px) {
 	#graphic_soft, #web_seisaku {
@@ -545,4 +545,3 @@ footer p {
 	margin: 0 auto;
 	width: 20%;
 	min-width: 150px;
-}
